fix(community-resume): Change grammar

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
       <h2><b>Reason for applying</b></h2>
 
-      <p>I struggled a lot during my initial days of learning to become a developer. Honestly, the books and videos were there and easy to get from the internet but there was really no developer community in Nigeria. Overtime, I have discovered that there is nothing greater than community driven efforts in building products and providing easy entry for talented people to join the limited pool of developers and technologists currently available.</p>
+      <p>I struggled a lot during my initial days of learning to become a developer. Honestly, the books and videos were there and easy to get from the internet but there was really no developer community in Nigeria.
+
+      Overtime, I have discovered that there is nothing greater than having community efforts drive the building of products and provide easy entry for talented people to join the limited pool of developers and technologists currently available.</p>
 
       <p>I am very passionate about programming, building products(open-source and proprietary software) specifically with web technologies and mentoring passionate, talented minds in becoming world-class developers and technology leaders.</p>
 
