fix(community-resume): Fix Ugly Links

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
 <p>Link: <a href="http://goodheads.io">Goodheads.io</a></p>
 
-<p><a href="http://goodheads.io">Goodheads.io</a> was created out of my desire to provide tutorials for developers to learn [PHP](http://goodheads.io/category/php/), [Git](),  [Javascript](http://goodheads.io/category/javascript/), [Ruby](http://goodheads.io/category/ruby/), [Laravel](http://goodheads.io/category/laravel/) and [Mean Stack](http://goodheads.io/category/javascript/). Currently, it has over 100 technical articles.</p>
+<p><a href="http://goodheads.io">Goodheads.io</a> was created out of my desire to provide tutorials for developers to learn <a href="http://goodheads.io/category/php/">PHP</a>, Git, <a href="http://goodheads.io/category/javascript/">Javascript</a>, <a href="http://goodheads.io/category/ruby/">Ruby</a>, <a href="http://goodheads.io/category/laravel/">Laravel</a> and <a href="http://goodheads.io/category/javascript/">Mean Stack</a>. Currently, it has over 100 technical articles.</p>
 
 <p>Very notable is a series I created on building a <a href="https://github.com/goodheads/prego">project management app</a> that got lots of developers to start visiting the site as a technical resource.</p>
 
