fix(community-resume): Fix Links

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <p>Attendance: <strong>Over 150</strong></p>
 
-      <p>This was a webinar hosted by BeMyApp, streamed to developers over the world. Developers from countries like France, Nigeria, Sweden, UK registered and participated by asking me questions after my presentation.</p>
+      <p>This was a webinar hosted by <a href="http://agency.bemyapp.com/">BeMyApp</a>, streamed to developers all over the world. Developers from countries like France, Nigeria, Sweden, UK registered and participated by asking me questions after my presentation.</p>
 
       <p>I spoke about <strong>Rapid Application Development With Laravel Spark</strong></p>
 
