fix(community-resume): Add follow button

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <p>Link: <a href="https://github.com/unicodeveloper/awesome-tdd">https://github.com/unicodeveloper/awesome-tdd</a></p>
 
 <iframe src="https://ghbtns.com/github-btn.html?user=unicodeveloper&repo=awesome-tdd&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-<iframe src="https://ghbtns.com/github-btn.html?user=unicodeveloper&repo=awesome-tdd&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+<iframe src="https://ghbtns.com/github-btn.html?user=unicodeveloper&repo=awesome-tdd&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
 <iframe src="https://ghbtns.com/github-btn.html?user=unicodeveloper&repo=awesome-tdd&type=watch&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
 
 <p>Created an awesome curated list of test driven development resources for learning purposes.</p>
@@ -349,7 +349,7 @@
 
 <h2>Open Source Contributor</h2>
 
-<p>Profile: <a href="https://github.com/unicodeveloper">@unicodeveloper</a></p>
+<iframe src="https://ghbtns.com/github-btn.html?user=unicodeveloper&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="290px" height="30px"></iframe>
 
 <p>I am very active on Github. I also have an insatiable passion for open source. Rarely a day goes by without me commiting to one or two repositories. I currently maintain 12 Laravel packages and 4 Javascript Modules.
 All my PHP packages follow PSR-2 and PSR-4, semantic versioning, and are available on Packagist for download through Composer. Most of my packages have complete test suites and are well documented.
