feat(community-resume): Add Introduction

--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
 
       <hr>
 
-      <h1>Technical Trainer at Andela</h1>
+      <h1>Introduction</h1>
 
-      <h2>November 2014 - Present</h2>
+      <p>I am continuously in awe of technology and people interaction. How do we break up complex problems into understandable and sizeable bits, solve daily challenges with technology, build better communities and inspire people to stand on the
+        shoulder of giants? These enormous curiosity has led me to serve as a Builder of Communities, Professional Trainer, Prolific Writer, Technology Advocate and Developer of intuitive, interesting and impactful technology solutions.</p>
+
+      <p>I am energetic, uber charismatic and a firm believer of inspiring greatness around people.</p>
+
+      <h2><b>Current Responsibility</b></h2>
+
+      <h3>Technical Trainer at Andela (November 2014 - Present)</h3>
 
       <p>Andela is a global talent accelerator that identify high-potential developers on the African continent, shape them into world-class technical leaders, and pair them with companies all over the world as full-time, distributed team members.</p>
 
