--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <h1 class="project-name">Prosper Otemuyiwa</h1>
       <h2 class="project-tagline">Welcome to My Community Resume</h2>
       <a href="https://github.com/unicodeveloper" class="btn">GitHub</a>
-      <a href="https://www.facebook.com/otemuyiwa.prosper" class="btn">Facebook</a>
+      <a href="https://plus.google.com/u/1/+prosperotemuyiwa101" class="btn">Google Plus</a>
       <a href="https://ng.linkedin.com/in/prosperotemuyiwa" class="btn">LinkedIn</a>
       <a href="#" class="btn">CV</a>
     </section>
 
     <section class="main-content">
-      <p><strong>Google Plus</strong> <a href="https://plus.google.com/u/1/+prosperotemuyiwa101">+prosperotemuyiwa101</a></p>
+      <p><strong>Facebook</strong> <a href="https://www.facebook.com/otemuyiwa.prosper">Otemuyiwa Prosper</a></p>
 
       <p><strong>Twitter:</strong> <a href="http://twitter.com/unicodeveloper">@unicodeveloper</a></p>
 
@@ -37,19 +37,6 @@
 
       <p>I am energetic, uber charismatic and a firm believer of inspiring greatness around people.</p>
 
-      <h2><b>Current Responsibility</b></h2>
-
-      <h3>Technical Trainer at Andela (November 2014 - Present)</h3>
-
-      <p>Andela is a global talent accelerator that identify high-potential developers on the African continent, shape them into world-class technical leaders, and pair them with companies all over the world as full-time, distributed team members.</p>
-
-      <p>I work with a team of talented people that are helping groom the next generation of Software Engineers who will change the world.</p>
-
-      <p>I develop the PHP, Javascript, Ruby, Python, Java and Soft Skills Learning curriculums alongside a team of other talented developer trainers. These curriculums are currently been used in Nigeria and Kenya.</p>
-
-      <p>I also actively train and mentor these fellows(Nigeria and Kenya) in the art of crafting solid, well-tested &amp; user-friendly software.</p>
-
-      <p>I have over 4 years of experience working with PHP and Javascript and about 2 years experience working with Java on Biometric Software Development.</p>
 
       <h2><b>Reason for applying</b></h2>
 
@@ -57,13 +44,29 @@
 
       Overtime, I have discovered that there is nothing greater than having community efforts drive the building of products and provide easy entry for talented people to join the limited pool of developers and technologists currently available.</p>
 
-      <p>I am very passionate about programming, building products(open-source and proprietary software) specifically with web technologies and mentoring passionate, talented minds in becoming world-class developers and technology leaders.</p>
+      <p>I am very passionate about programming, building products (open-source and proprietary software) specifically with web technologies and mentoring passionate, talented minds in becoming world-class developers and technology leaders.</p>
 
       <p>I want to raise more developers that are passionate about the community. Developers that will go on to become speakers, advocates, authors and thought leaders. I want to inspire developers to be more than just code monkeys, developers that will mentor and be mentored. All these are geared towards having a very vibrant developer community.</p>
 
       <p>As a Google Developer Expert, I'll have more resources and tools to be able to reach out to fellows across remote parts of Africa and also around the world, providing them the opportunity to change the world by introducing them to web technologies and mentoring them alongside.</p>
 
       <p>As a Google Developer Expert, I'll be a part of a community of talented developer experts and Googlers which provides me an incredible opportunity to grow in leaps and bounds as a programmer, trainer, author and developer evangelist.</p>
+
+
+      <h2><b>Current Responsibility</b></h2>
+
+      <h3>Technical Trainer at Andela (November 2014 - Present)</h3>
+
+      <p>Andela is a global talent accelerator that identifies high-potential developers on the African continent, shapes them into world-class technical leaders, and pairs them with companies all over the world as full-time, distributed team members.</p>
+
+      <p>I work with a team of talented people that are helping groom the next generation of Software Engineers who will change the world.</p>
+
+      <p>I develop the PHP, Javascript, Ruby, Python, Java and Soft Skills Learning curriculums alongside a team of other talented developer trainers. These curriculums are currently been used in Nigeria and Kenya.</p>
+
+      <p>I also actively train and mentor these fellows (Nigeria and Kenya) in the art of crafting solid, well-tested &amp; user-friendly software.</p>
+
+      <p>I have over 4 years of experience working with PHP and Javascript and about 2 years experience working with Java on Biometric Software Development.</p>
+
 
       <h2><b>Relationship with Google</b></h2>
 
@@ -182,7 +185,7 @@
 
 <p><img width="1053" alt="screen shot 2016-05-13 at 11 33 02 pm" src="https://cloud.githubusercontent.com/assets/2946769/15263631/bbccfe5a-1963-11e6-88fa-6f30b74d5f91.png"></p>
 
-<p><img width="1051" alt="screen shot 2016-05-13 at 11 32 42 pm" src="https://cloud.githubusercontent.com/assets/2946769/15263633/c3288cb4-1963-11e6-9f90-9d99becaeb93.png"></p>
+<p><img width="1051" alt="screen shot 2016-05-13 at 11 32 42 pm" src="https://cloud.githubusercontent.com/assets/2946769/15313020/4189550e-1c00-11e6-8370-8f39a4da579c.png"></p>
 
 <hr>
 
@@ -358,7 +361,7 @@
 
 <iframe src="https://ghbtns.com/github-btn.html?user=unicodeveloper&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="290px" height="30px"></iframe>
 
-<p>I am very active on Github. I also have an insatiable passion for open source. Rarely a day goes by without me commiting to one or two repositories. I currently maintain 12 Laravel packages and 4 Javascript Modules.
+<p>I am very active on Github. I also have an insatiable passion for open source. Rarely a day goes by without me committing to one or two repositories. I currently maintain 12 Laravel packages and 4 Javascript Modules.
 All my PHP packages follow PSR-2 and PSR-4, semantic versioning, and are available on Packagist for download through Composer. Most of my packages have complete test suites and are well documented.
 My packagist and npm profile are available here:
 <a href="https://packagist.org/users/unicodeveloper">https://packagist.org/users/unicodeveloper</a> and
