fix(community-resume): Minor fixes

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
       <h1>Introduction</h1>
 
       <p>I am continuously in awe of technology and people interaction. How do we break up complex problems into understandable and sizeable bits, solve daily challenges with technology, build better communities and inspire people to stand on the
-        shoulder of giants? These enormous curiosity has led me to serve as a Builder of Communities, Professional Trainer, Prolific Writer, Technology Advocate and Developer of intuitive, interesting and impactful technology solutions.</p>
+        shoulder of giants? This enormous curiosity has led me to serve as a Builder of Communities, Professional Trainer, Prolific Writer, Technology Advocate and Developer of intuitive, interesting and impactful technology solutions.</p>
 
-      <p>I am energetic, uber charismatic and a firm believer of inspiring greatness around people.</p>
+      <p>I am energetic, uber-charismatic and a firm believer of inspiring greatness around people.</p>
 
 
       <h2><b>Reason for applying</b></h2>
 
       <p>I struggled a lot during my initial days of learning to become a developer. Honestly, the books and videos were there and easy to get from the internet but there was really no developer community in Nigeria.
 
-      Overtime, I have discovered that there is nothing greater than having community efforts drive the building of products and provide easy entry for talented people to join the limited pool of developers and technologists currently available.</p>
+      Over time, I have discovered that there is nothing greater than having community efforts drive the building of products and provide easy entry for talented people to join the limited pool of developers and technologists currently available.</p>
 
       <p>I am very passionate about programming, building products (open-source and proprietary software) specifically with web technologies and mentoring passionate, talented minds in becoming world-class developers and technology leaders.</p>
 
@@ -91,28 +91,28 @@
 
       <hr>
 
-<h2>
-<a id="lagos-forloop-event" class="anchor" href="#lagos-forloop-event" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lagos forLoop Event</h2>
+      <h2>
+      <a id="lagos-forloop-event" class="anchor" href="#lagos-forloop-event" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lagos forLoop Event</h2>
 
-<p>Held on: <strong>30 April, 2016</strong></p>
+      <p>Held on: <strong>30 April, 2016</strong></p>
 
-<p>Meetup Link: <a href="https://attending.io/events/forloop">https://attending.io/events/forloop</a></p>
+      <p>Meetup Link: <a href="https://attending.io/events/forloop">https://attending.io/events/forloop</a></p>
 
-<p>Attendance: <strong>50</strong></p>
+      <p>Attendance: <strong>50</strong></p>
 
-<p>This event envisions to be a developer event where software developers can come together, interact, and share knowledge on different technologies. This was the maiden edition.</p>
+      <p>This event envisions to be a developer event where software developers can come together, interact, and share knowledge on different technologies. This was the maiden edition.</p>
 
-<p>I Spoke about <strong>Continuous Delivery Without The Drama</strong> at this event.</p>
+      <p>I Spoke about <strong>Continuous Delivery Without The Drama</strong> at this event.</p>
 
-<p>Slides Link: <a href="https://speakerdeck.com/unicodeveloper/continuous-delivery-without-the-drama">Continuous Delivery Without The Drama</a></p>
+      <p>Slides Link: <a href="https://speakerdeck.com/unicodeveloper/continuous-delivery-without-the-drama">Continuous Delivery Without The Drama</a></p>
 
-<p>Registration is ongoing for the <code>Abuja</code> forLoop Event - <a href="https://attending.io/events/forloop-2016-abuja-94bf9b3b-a055-4471-811b-bf541442c0c7">Abuja forLoop Event</a> <strong>20 People currently registered</strong></p>
+      <p>Registration is ongoing for the <code>Abuja</code> forLoop Event - <a href="https://attending.io/events/forloop-2016-abuja-94bf9b3b-a055-4471-811b-bf541442c0c7">Abuja forLoop Event</a> <strong>20 People currently registered</strong></p>
 
-<p>Registration is ongoing for the second edition of the forLoop Event - <a href="https://attending.io/events/forloop-2016-2">Lagos forLoop #2</a> <strong>64 People currently registered</strong></p>
+      <p>Registration is ongoing for the second edition of the forLoop Event - <a href="https://attending.io/events/forloop-2016-2">Lagos forLoop #2</a> <strong>64 People currently registered</strong></p>
 
-<hr>
+      <hr>
 
-<h2>
+      <h2>
 <a id="lagos-php-meetup" class="anchor" href="#lagos-php-meetup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lagos PHP Meetup</h2>
 
 <p>Held on: <strong>23 April, 2016</strong></p>
