fix(community-resume): From Been to being

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <p>I work with a team of talented people that are helping groom the next generation of Software Engineers who will change the world.</p>
 
-      <p>I develop the PHP, Javascript, Ruby, Python, Java and Soft Skills Learning curriculums alongside a team of other talented developer trainers. These curriculums are currently been used in Nigeria and Kenya.</p>
+      <p>I develop the PHP, Javascript, Ruby, Python, Java and Soft Skills Learning curriculums alongside a team of other talented developer trainers. These curriculums are currently being used in Nigeria and Kenya.</p>
 
       <p>I also actively train and mentor these fellows (Nigeria and Kenya) in the art of crafting solid, well-tested &amp; user-friendly software.</p>
 
