feat(community-resume): Add Link to CV

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="https://github.com/unicodeveloper" class="btn">GitHub</a>
       <a href="https://plus.google.com/u/1/+prosperotemuyiwa101" class="btn">Google Plus</a>
       <a href="https://ng.linkedin.com/in/prosperotemuyiwa" class="btn">LinkedIn</a>
-      <a href="#" class="btn">CV</a>
+      <a href="https://github.com/unicodeveloper/community-resume/files/273424/OtemuyiwaProsperResume_2016.05.18.docx.pdf" class="btn">CV</a>
     </section>
 
     <section class="main-content">
